<resources>
    <string name="app_name">Foosball</string>
    <string name="leaderboard_title">Leaderboards</string>
    <string name="games_title">Games</string>
    <string name="sort_by">Sort by</string>
    <string name="games_won">Games won</string>
    <string name="games_count">Games count</string>
    <string name="place_title">Place</string>
    <string name="player_title">Player</string>
    <string name="won_title">Won</string>
    <string name="score_title">Score</string>
    <string name="add_result">Add result</string>
    <string name="smth_went_wrong">Something went wrong</string>
    <string name="bad_input">Please fill all fields</string>
    <string name="game_added">Game added</string>
    <string name="game_result_template">%1$s %2$d : %3$d %4$s</string>
</resources>